--- a/src/app/section/results/results.component.html
+++ b/src/app/section/results/results.component.html
@@ -1,1 +1,9 @@
-<p>results works!</p>
+<div class="container">
+  <div class="row" *ngFor="let result of matches">
+    <div class="results">
+      <h6>Team1</h6>
+      <h6>{{ result.time }}</h6>
+      <h6>Team1</h6>
+    </div>
+  </div>
+</div>
