--- a/src/app/section/teams/teams.component.html
+++ b/src/app/section/teams/teams.component.html
@@ -1,6 +1,6 @@
 <div class="container p-4" *ngFor="let team of teams">
   <div class="col-sm">
-    <h6>{{ team.name }}</h6>
+    <p>{{ team.name }}</p>
     <img src="{{ team.logo }}" alt="" />
     <p>{{ team.description }}</p>
     <br />
