--- a/src/app/core/navbar/navbar.component.scss
+++ b/src/app/core/navbar/navbar.component.scss
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 form {
-  color: #555;
+  color: rgb(201, 201, 201);
   display: flex;
   padding: 2px;
   border: 1px solid currentColor;
-  border-radius: 5px;
+  border-radius: 100px;
+  width: 555px;
 }
 input[type="search"] {
   border: none;
@@ -14,6 +17,7 @@ input[type="search"] {
   color: inherit;
   border: 1px solid transparent;
   border-radius: inherit;
+  width: 500px;
 }
 
 input[type="search"]::placeholder {
@@ -36,4 +40,25 @@ button[type="submit"] {
 
 button[type="submit"]:hover {
   opacity: 1;
+}
+
+.navigation-items{
+
+  width: 70px;
+  left: 136px;
+  top: 46px;
+  margin-left: 2%;
+  margin-right: 2%;
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
+
+  a {
+    color: #000000;
+  }
+  
+  
 }
