--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,20 +1,20 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-light border shadow rounded">
   <div class="container">
     <ul class="navbar-nav">
-      <li class="nav-item active">
+      <li class="nav-item active navigation-items">
         <a class="nav-link" href="#">Home</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item navigation-items">
         <a class="nav-link" href="news">News</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item navigation-items">
         <a class="nav-link" href="teams">Teams</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item navigation-items">
         <a class="nav-link" href="results">Results</a>
       </li>
     </ul>
-    <form class="rounded">
+    <form>
       <input type="search" placeholder="Search Matches, Players, Teams" />
       <button type="submit">Search</button>
     </form>
