result page fixed showing data from json file

--- a/src/app/section/home/home.component.html
+++ b/src/app/section/home/home.component.html
@@ -95,7 +95,7 @@
             <h6>{{ player.firstName }} {{ player.lastName }}</h6>
             <small>
               <i class="fa-solid fa-futbol"></i> &nbsp;
-              {{ player.goals }} Goals<</small
+              {{ player.goals }} Goals</small
             >
           </div>
           <div class="d-flex justify-content-center">
