finished players page

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -13,6 +13,9 @@
       <li class="nav-item">
         <a class="nav-link" href="results">Results</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="players">Players</a>
+      </li>
     </ul>
     <form class="rounded">
       <input type="search" placeholder="Search Matches, Players, Teams" />
