--- a/src/app/section/home/home.component.scss
+++ b/src/app/section/home/home.component.scss
@@ -128,6 +128,11 @@
     margin-bottom: 3rem;
   }
 }
+.best-player img {
+  width: 4rem;
+  height: 4rem;
+  margin: 1.2rem;
+}
 
 .best-player i {
   font-size: 10px;
