--- a/src/app/section/teams/teams.component.html
+++ b/src/app/section/teams/teams.component.html
@@ -1,5 +1,5 @@
-<div class="container p-4" *ngFor="let team of teams">
-  <div class="col-sm">
+<div class="container p-4">
+  <div class="col-sm" *ngFor="let team of teams">
     <p>Team Name: {{ team.name }}</p>
     <img src="{{ team.logo }}" alt="" />
     <h1>Info</h1>
