i made some changes around the app

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -18,7 +18,11 @@
       </li>
     </ul>
     <form class="rounded">
-      <input type="search" placeholder="Search Matches, Players, Teams" />
+      <input
+        type="search"
+        [(ngModel)]="search"
+        placeholder="Search Matches, Players, Teams"
+      />
       <button type="submit">Search</button>
     </form>
 
