--- a/src/app/section/home/home.component.css
+++ b/src/app/section/home/home.component.css
@@ -1,12 +1,15 @@
 * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-.lives {
-  height: 300px;
-  width: 1400px;
+.container {
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: repeat(4, 1fr);
+  grid-row-gap: 1em;
+  grid-column-gap: 1em;
 }
 
 .home-img {
@@ -19,7 +22,14 @@
 
 .col-8 {
   background: #015c18;
-  background: -webkit-gradient(linear, left top, right top, from(#015c18), color-stop(45%, #008b07), color-stop(99%, #005802));
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#015c18),
+    color-stop(45%, #008b07),
+    color-stop(99%, #005802)
+  );
   background: linear-gradient(90deg, #015c18 0%, #008b07 45%, #005802 99%);
   border-radius: 1rem;
 }
@@ -28,13 +38,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  justify-content: center;
   margin-left: 20rem;
   color: #fff;
   margin-bottom: 1rem;
@@ -67,8 +72,8 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin-top: 1rem;
   margin-left: 20rem;
   gap: 8.6rem;
@@ -87,14 +92,19 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   padding-bottom: 5.2rem;
   padding-top: 1.5rem;
   background-color: #e2ebf2;
   border-radius: 10px;
   padding-left: 1rem;
-  height: 750px;
+  height: 780px;
+  width: 200px;
+}
+
+.live-matches h6 {
+  font-size: 12px;
 }
 
 .live-matches h1 {
@@ -103,11 +113,11 @@
 
 .teams a {
   text-decoration: none;
-  font-size: 0.8rem;
+  font-size: 0.6rem;
 }
 
 .team-list h6 {
-  font-size: 0.4rem;
+  font-size: 1rem;
 }
 
 .teams-list a {
@@ -119,12 +129,11 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-bottom: 0.5rem;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .live-icons img {
@@ -138,8 +147,8 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   padding-bottom: 6.5rem;
   padding-top: 1.5rem;
   background-color: #e2ebf2;
@@ -152,11 +161,11 @@
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin-bottom: 3rem;
 }
 
@@ -172,8 +181,8 @@
 
 .primary-buttons {
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .filter-data select {
@@ -188,6 +197,10 @@
 .filtered-matches {
   position: relative;
   width: 680px;
+}
+
+.filtered-matches h6 {
+  font-size: 0.8rem;
 }
 
 .filtered-matches-1 {
@@ -208,3 +221,10 @@
   padding: 5px;
 }
 /*# sourceMappingURL=home.component.css.map */
+
+// Queries
+@media (max-width: 950px) {
+  .filtered-matches {
+    width: 480px;
+  }
+}
