--- a/src/app/section/home/home.component.html
+++ b/src/app/section/home/home.component.html
@@ -2,23 +2,23 @@
 <div class="container">
   <div class="row">
     <div class="col lives">
-      <div class="live-matches justify-content-between">
+      <div class="live-matches">
         <div class="live">
-          <h1>
+          <h4>
             Live matches
             <a href="#"><i class="fa-solid fa-arrow-left"> </i></a> &nbsp;
             <a href="#"><i class="fa-solid fa-arrow-right"> </i></a>
-          </h1>
+          </h4>
 
-          <div class="live-icons justify-content-between">
+          <div class="live-icons justify-content-around">
             <img src="assets/img/teams-logo/manchester.png" />
-            <h6>3 : 2 &nbsp;</h6>
+            <h6>3 : 2</h6>
             <img src="assets/img/teams-logo/realmadrid.png" />
           </div>
           <div class="teams">
             <h1>Teams</h1>
             <div class="teams-list live-icons" *ngFor="let team of homeTeams">
-              <img src="assets/img/teams-logo/manchester.png" />
+              <img src="{{ team.logo }}" />
               <h6>{{ team.name }}</h6>
               &nbsp;&nbsp;
               <a href="#"
@@ -78,15 +78,15 @@
     <div class="col">
       <div class="trending-section">
         <div class="trendig">
-          <h6>
+          <h4>
             Trending Now
             <a href="#"><i class="fa-solid fa-arrow-left"> </i></a> &nbsp;
             <a href="#"><i class="fa-solid fa-arrow-right"> </i></a>
-          </h6>
+          </h4>
 
           <div class="best-player" *ngFor="let player of bestPlayer(Players)">
             <img src="{{ player.logo }}" />
-            <h6>{{ player.firstName }} {{ player.lastName }}</h6>
+            <h1>{{ player.firstName }} {{ player.lastName }}</h1>
             <small>
               <i class="fa-solid fa-futbol"></i> &nbsp;
               {{ player.goals }} Goals</small
@@ -118,7 +118,6 @@
       <div class="filter-data">
         <select name="football" id="competitons">
           <option value="football">Football</option>
-          <option value="Volley">Volley</option>
           <option value="basketball">Basketball</option>
         </select>
         <select name="results" id="results">
@@ -149,8 +148,8 @@
       <small> VS </small>
       <h6>{{ info.team2 }}</h6>
       <img src="{{ info.team2logo }}" />
-      <i class="fa-solid fa-clock"></i> 17: 00 &nbsp; &nbsp;
-      <i class="fa-solid fa-map-marker"></i> London
+      <i class="fa-solid fa-clock"></i> {{ info.date }} - {{ info.time }} &nbsp;
+      &nbsp; <i class="fa-solid fa-map-marker"></i> {{ info.location }}
       <i class="fa fa-heart" style="font-size: 25px"></i>
       <a href="#"
         >View Details &nbsp;<i class="fa-solid fa-arrow-right"> </i
@@ -168,41 +167,31 @@
             type="text"
             class="form-control"
             id="gametype"
-            placeholder="Game Type"
+            placeholder="Team 1"
             list="gametype"
           />
-          <datalist id="gametype">
-            <option>Football</option>
-            <option>Football</option>
-          </datalist>
         </div>
         <div class="form-group mb-2">
           <input
             type="text"
             class="form-control"
-            id="location"
-            placeholder="Select Location"
+            id="gametype"
+            placeholder="Team 2"
+            list="gametype"
           />
         </div>
         <div class="form-group mb-2">
           <input
-            type="text"
+            type="time"
             class="form-control"
-            id="select-ground"
+            id="time"
             placeholder="Select Ground"
           />
         </div>
         <div class="form-group mb-2">
           <input type="date" class="form-control" id="dateofgame" />
         </div>
-        <div class="form-group mb-2">
-          <input
-            type="number"
-            class="form-control"
-            id="numberofplayer"
-            placeholder="Number of players"
-          />
-        </div>
+
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
