--- a/src/app/section/teams/players/players/players.component.css
+++ b/src/app/section/teams/players/players/players.component.css
@@ -9,7 +9,7 @@
       grid-template-columns: repeat(4, 1fr);
   grid-row-gap: 1em;
   grid-column-gap: 1em;
-  width: 100%;
+  width: 80rem;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
