--- a/src/app/section/teams/players/players/players.component.html
+++ b/src/app/section/teams/players/players/players.component.html
@@ -1,3 +1,6 @@
+<div class="jumbotron text-center">
+  <h1>Players</h1>
+</div>
 <div class="wrapper">
   <ng-container *ngFor="let e of playerData; let i = index">
     <div class="playerModel">
