--- a/src/app/section/news/news.component.html
+++ b/src/app/section/news/news.component.html
@@ -1,6 +1,7 @@
-<div class="jumbotron text-center">
-  <h1>News</h1>
-</div>
+<app-header>
+  <span title>News</span>
+  <span description>Check our lastest news</span>
+</app-header>
 <div class="container rounded p-0">
   <ul class="list-unstyled border border-dark p-3">
     <li>
