--- a/src/app/section/teams/players/players/players.component.html
+++ b/src/app/section/teams/players/players/players.component.html
@@ -1,6 +1,7 @@
-<div class="jumbotron text-center">
-  <h1>Players</h1>
-</div>
+<app-header>
+  <span title>Players</span>
+  <span description>Players info</span>
+</app-header>
 <div class="wrapper">
   <ng-container *ngFor="let e of playerData; let i = index">
     <div class="playerModel">
