--- a/src/app/section/teams/teams.component.html
+++ b/src/app/section/teams/teams.component.html
@@ -1,6 +1,7 @@
-<div class="jumbotron">
-  <h1>Teams</h1>
-</div>
+<app-header>
+  <span title>Teams</span>
+  <span description>Teams details</span>
+</app-header>
 
 <div class="container p-4">
   <div class="col" *ngFor="let team of teams">
