--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
+<nav class="navbar navbar-expand navbar-light bg-light">
   <div class="container">
     <ul class="navbar-nav">
       <li class="nav-item active">
@@ -16,13 +16,18 @@
       <li class="nav-item">
         <a class="nav-link" href="players">Players</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="statistics">Statistics</a>
+      </li>
     </ul>
-    <form class="rounded">
+    <form>
       <input
         type="search"
         [(ngModel)]="search"
+        (keyup)="onChange()"
         placeholder="Search Matches, Players, Teams"
       />
+
       <button type="submit">Search</button>
     </form>
 
