--- a/src/app/section/teams/players/players/players.component.scss
+++ b/src/app/section/teams/players/players/players.component.scss
@@ -25,3 +25,9 @@
   border-radius: 10px;
   padding: 0.5rem;
 }
+.playerModel img {
+  height: 6.5rem;
+  width: 6.5rem;
+  border-radius: 50%;
+  border: 3px solid #e2ebf2;
+}
