--- a/src/app/section/statistics/statistics.component.css
+++ b/src/app/section/statistics/statistics.component.css
@@ -25,7 +25,9 @@
 }
 
 .results img {
-  width: 4rem;
-  height: 4.2rem;
+  height: 6.5rem;
+  width: 6.5rem;
+  border-radius: 50%;
+  border: 3px solid #e2ebf2;
 }
 /*# sourceMappingURL=statistics.component.css.map */
