--- a/src/app/section/home/home.component.scss
+++ b/src/app/section/home/home.component.scss
@@ -58,7 +58,6 @@
 }
 .players {
   display: flex;
-  align-items: center;
   margin-top: 1rem;
   margin-left: 20rem;
   gap: 8.6rem;
@@ -136,9 +135,10 @@
   }
 }
 .best-player img {
-  width: 4rem;
-  height: 4rem;
-  margin: 1.2rem;
+  height: 5rem;
+  width: 5rem;
+  border-radius: 50%;
+  border: 3px solid #e2ebf2;
 }
 
 .best-player i {
