--- a/src/app/section/statistics/statistics.component.scss
+++ b/src/app/section/statistics/statistics.component.scss
@@ -4,7 +4,6 @@
   justify-content: space-between;
   align-items: center;
   background-color: rgba(0, 128, 0, 0.205);
-
   padding: 1.5rem;
   width: 50rem;
   border-radius: 1rem;
@@ -16,7 +15,9 @@
   }
 
   img {
-    width: 4rem;
-    height: 4.2rem;
+    height: 6.5rem;
+    width: 6.5rem;
+    border-radius: 50%;
+    border: 3px solid #e2ebf2;
   }
 }
