--- a/src/app/section/teams/players/players/players.component.css
+++ b/src/app/section/teams/players/players/players.component.css
@@ -29,4 +29,11 @@
   border-radius: 10px;
   padding: 0.5rem;
 }
+
+.playerModel img {
+  height: 6.5rem;
+  width: 6.5rem;
+  border-radius: 50%;
+  border: 3px solid #e2ebf2;
+}
 /*# sourceMappingURL=players.component.css.map */
