--- a/src/app/section/results/results.component.css
+++ b/src/app/section/results/results.component.css
@@ -25,7 +25,9 @@
 }
 
 .results img {
-  width: 4rem;
-  height: 4.2rem;
+  height: 5.5rem;
+  width: 5rem;
+  border-radius: 10%;
+  border: 3px solid #e2ebf2;
 }
 /*# sourceMappingURL=results.component.css.map */
