--- a/src/app/section/teams/teams.component.css
+++ b/src/app/section/teams/teams.component.css
@@ -1,1 +1,7 @@
-/* No CSS *//*# sourceMappingURL=teams.component.css.map */
+.col img {
+  height: 6.5rem;
+  width: 6.5rem;
+  border-radius: 10%;
+  border: 3px solid #e2ebf2;
+}
+/*# sourceMappingURL=teams.component.css.map */
