--- a/src/app/section/teams/teams.component.html
+++ b/src/app/section/teams/teams.component.html
@@ -10,7 +10,11 @@
     <h1>Info:</h1>
     <p>{{ team.description }}</p>
     <h1>Players</h1>
-    <li>{{ team.players }}</li>
+    <div>
+      <li>
+        {{ team.players }}
+      </li>
+    </div>
     <br />
     <button class="btn btn-info">More Info</button>
     <hr />
