--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,26 +6,11 @@
 
 <!-- Footer -->
 <footer>
-  Love Angular?&nbsp;
+  Sports Service&nbsp;
   <a href="https://github.com/angular/angular" target="_blank" rel="noopener">
-    Give our repo a star.
-    <div class="github-star-badge">
-      <svg
-        class="material-icons"
-        xmlns="http://www.w3.org/2000/svg"
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-      >
-        <path d="M0 0h24v24H0z" fill="none" />
-        <path
-          d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
-        />
-      </svg>
-      Star
-    </div>
+    Created by SDA Students
   </a>
-  <a href="https://github.com/angular/angular" target="_blank" rel="noopener">
+  <a href="https://drhcode.com" target="_blank" rel="noopener">
     <svg
       class="material-icons"
       xmlns="http://www.w3.org/2000/svg"
@@ -46,7 +31,7 @@
   height="485.677"
   viewBox="0 0 2611.084 485.677"
 >
-  <title>Gray Clouds Background</title>
+  <title>Sports Service</title>
   <path
     id="Path_39"
     data-name="Path 39"
@@ -55,11 +40,3 @@
     fill="#eee"
   />
 </svg>
-
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
