fixed form control error

--- a/src/app/section/home/home.component.html
+++ b/src/app/section/home/home.component.html
@@ -175,6 +175,7 @@
           <input
             type="file"
             id="team1logo"
+            accept=".png, .jpg, .jpeg"
             formControlName="team2logo"
             class="form-control"
           />
